--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
       <span v-else-if="changePercent < 0">👎</span>
       <span v-else>🤞</span>
 
-      <span v-show="changePercent > 0">👍</span>
+      <!-- <span v-show="changePercent > 0">👍</span>
       <span v-show="changePercent < 0">👎</span>
-      <span v-show="changePercent === 0">🤞</span>
-
+      <span v-show="changePercent === 0">🤞</span> -->
     </h1>
+
+    <ul>
+      <li v-for="(p, i) in prices" v-bind:key="p">
+        {{ i }} - {{ p }}
+      </li>
+    </ul>
+
+    <ul>
+      <li v-for="(p, i) in pricesWithDays" v-bind:key="p.day">
+        {{ i }} - {{ p.day}} -- {{ p.value }}
+      </li>
+    </ul>
 
   </div>
 
