--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
 
   <div id="app">
-    <img v-bind:src="img" v-bind:alt="name">
+    <img
+    v-on:mouseover="toggleShowPrices"
+    v-on:mouseout="toggleShowPrices"
+    v-bind:src="img" v-bind:alt="name">
     <h1>
       {{ name }}
       <span v-if="changePercent > 0">👍</span>
@@ -20,15 +23,21 @@
       <!-- <span v-show="changePercent > 0">👍</span>
       <span v-show="changePercent < 0">👎</span>
       <span v-show="changePercent === 0">🤞</span> -->
+
+      <!-- <ul>
+        <li v-for="(p, i) in prices" v-bind:key="p">
+        {{ i }} - {{ p }}
+       </li>
+      </ul> -->
+
+      <span v-on:click="toggleShowPrices">
+        {{ showPrices ? '🙈' : '🙉' }}
+      </span>
+  
     </h1>
 
-    <ul>
-      <li v-for="(p, i) in prices" v-bind:key="p">
-        {{ i }} - {{ p }}
-      </li>
-    </ul>
 
-    <ul>
+    <ul v-show=showPrices>
       <li v-for="(p, i) in pricesWithDays" v-bind:key="p.day">
         {{ i }} - {{ p.day}} -- {{ p.value }}
       </li>
