Clases en tiempo real 10/38

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     v-on:mouseover="toggleShowPrices"
     v-on:mouseout="toggleShowPrices"
     v-bind:src="img" v-bind:alt="name">
-    <h1>
+    <h1
+      v-bind:class="changePercent > 0 ? 'greeen' : 'red' ">
       {{ name }}
       <span v-if="changePercent > 0">👍</span>
       <span v-else-if="changePercent < 0">👎</span>
@@ -27,7 +28,7 @@
       <!-- <ul>
         <li v-for="(p, i) in prices" v-bind:key="p">
         {{ i }} - {{ p }}
-       </li>
+        </li>
       </ul> -->
 
       <span v-on:click="toggleShowPrices">
@@ -38,7 +39,11 @@
 
 
     <ul v-show=showPrices>
-      <li v-for="(p, i) in pricesWithDays" v-bind:key="p.day">
+      <li
+        class="uppercase"
+        v-bind:class="{ orange: p.value === price, red:p.value < price, green: p.value > price }"
+        v-for="(p, i) in pricesWithDays"
+        v-bind:key="p.day">
         {{ i }} - {{ p.day}} -- {{ p.value }}
       </li>
     </ul>
