--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div id="app">
+  <div id="app" v-bind:style="{ background: '#' + color }">
     <img
     v-on:mouseover="toggleShowPrices"
     v-on:mouseout="toggleShowPrices"
