--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     v-bind:src="img" v-bind:alt="name">
     <h1
       v-bind:class="changePercent > 0 ? 'greeen' : 'red' ">
-      {{ name }}
+      {{ title }}
       <span v-if="changePercent > 0">👍</span>
       <span v-else-if="changePercent < 0">👎</span>
       <span v-else>🤞</span>
