--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   
     </h1>
 
+    <input type="number" v-model="value">
+    <span>{{ convertedValue }}</span>
 
     <ul v-show=showPrices>
       <li
