Comunicación entre Componentes: propiedades 17/38

--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
 <body>
 
   <div id="app" v-bind:style="{ background: '#' + color }">
-    <img
-    v-on:mouseover="toggleShowPrices"
-    v-on:mouseout="toggleShowPrices"
-    v-bind:src="img" v-bind:alt="name">
-    <h1
-      v-bind:class="changePercent > 0 ? 'greeen' : 'red' ">
-      {{ title }}
-      <span v-if="changePercent > 0">👍</span>
-      <span v-else-if="changePercent < 0">👎</span>
-      <span v-else>🤞</span>
+
+    <coin-detail v-bind:coin="btc"></coin-detail>
+
 
       <!-- <span v-show="changePercent > 0">👍</span>
       <span v-show="changePercent < 0">👎</span>
@@ -30,25 +23,6 @@
         {{ i }} - {{ p }}
         </li>
       </ul> -->
-
-      <span v-on:click="toggleShowPrices">
-        {{ showPrices ? '🙈' : '🙉' }}
-      </span>
-  
-    </h1>
-
-    <input type="number" v-model="value">
-    <span>{{ convertedValue }}</span>
-
-    <ul v-show=showPrices>
-      <li
-        class="uppercase"
-        v-bind:class="{ orange: p.value === price, red:p.value < price, green: p.value > price }"
-        v-for="(p, i) in pricesWithDays"
-        v-bind:key="p.day">
-        {{ i }} - {{ p.day}} -- {{ p.value }}
-      </li>
-    </ul>
 
   </div>
 
