--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 
   <div id="app" v-bind:style="{ background: '#' + color }">
 
-    <coin-detail v-bind:coin="btc"></coin-detail>
+    <coin-detail
+      v-on:change-color="updateColor"
+      v-bind:coin="btc">
+    </coin-detail>
+
+    <coin-detail
+    v-on:change-color="updateColor"
+    v-bind:coin="btc">
+    </coin-detail>
+
+    <coin-detail
+    v-on:change-color="updateColor"
+    v-bind:coin="btc">
+    </coin-detail>
+
 
 
       <!-- <span v-show="changePercent > 0">👍</span>
